<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.weblyzard.sparql</groupId>
	<artifactId>streaming-sparql-pom</artifactId>
	<version>0.0.7-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>streaming-sparql</module>
		<module>streaming-client</module>
	</modules>

	<name>com.weblyzard.sparql</name>
	<description>Cross-server SPARQL query library with support for incremental, streaming result processing.</description>
	<url>https://github.com/weblyzard/streaming-sparql</url>

	<developers>
		<developer>
			<name>Albert Weichselbraun</name>
			<email>albert@weichselbraun.net</email>
			<organization>webLyzard technology</organization>
			<organizationUrl>http://weblyzard.com</organizationUrl>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git://github.com/weblyzard/streaming-sparql.git</connection>
		<developerConnection>scm:git:ssh://github.com:weblyzard/streaming-sparql.git</developerConnection>
		<url>https://github.com/weblyzard/streaming-sparql/tree/master</url>
	</scm>

	<!-- profiles for the maven deployments -->
	<profiles>
		<profile>
			<id>profile-semanticlab</id>
			<properties>
				<environment>semanticlab</environment>
				<snapshot-repository-id>code.semanticlab.net</snapshot-repository-id>
				<snapshot-repository-url>dav:http://code.semanticlab.net/deploy/</snapshot-repository-url>
				<repository-id>code.semanticlab.net</repository-id>
				<repository-url>dav:http://code.semanticlab.net/deploy/</repository-url>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
				<property>
					<name>environment</name>
					<value>semanticlab</value>
				</property>
			</activation>
		</profile>
		<profile>
			<id>profile-mavencentral</id>
			<properties>
				<environment>mavencentral</environment>
				<snapshot-repository-id>
					ossrh
				</snapshot-repository-id>
				<snapshot-repository-url>
					https://oss.sonatype.org/content/repositories/snapshots
				</snapshot-repository-url>
				<repository-id>ossrh</repository-id>
				<repository-url>
					https://oss.sonatype.org/service/local/staging/deploy/maven2/
				</repository-url>
			</properties>
			<activation>
				<property>
					<name>environment</name>
					<value>mavencentral</value>
				</property>
			</activation>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>${snapshot-repository-id}</id>
			<url>${snapshot-repository-url}</url>
		</snapshotRepository>
		<repository>
			<id>${repository-id}</id>
			<url>${repository-url}</url>
		</repository>
	</distributionManagement>



	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>


	<build>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
				<version>2.4</version>
			</extension>
		</extensions>

		<plugins>
			<!-- Building -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<additionalOptions>-Xdoclint:none -html5</additionalOptions>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Unit testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M1</version>
				<configuration>
					<systemPropertyVariables>
						<user.language>de</user.language>
						<user.region>CH</user.region>
					</systemPropertyVariables>
					<encoding>UTF-8</encoding>
					<enviromentVariables>
						<LC_ALL>de_CH.UTF-8</LC_ALL>
						<LANG>de_CH.UTF-8</LANG>
					</enviromentVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>8.16</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>checkstyle</id>
						<phase>validate</phase>
						<configuration>
							<configLocation>https://raw.githubusercontent.com/weblyzard/checkstyle-rules/master/java/checkstyle.xml</configLocation>
							<encoding>UTF-8</encoding>
							<consoleOutput>true</consoleOutput>
							<linkXRef>false</linkXRef>
							<failOnViolation>true</failOnViolation>
							<violationSeverity>warning</violationSeverity>
						</configuration>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<organization>
		<name>webLyzard technology</name>
		<url>http://weblyzard.com</url>
	</organization>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.4</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<!-- OSS Sonatype snapshot repository required for junit-docker-rule -->
	<repositories>
		<repository>
			<id>ossrh</id>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
	</repositories>

</project>
